--- a/Dealership-Inventory/app/build.gradle
+++ b/Dealership-Inventory/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
