App Name / Icon Update

--- a/Dealership-Inventory/app/src/main/AndroidManifest.xml
+++ b/Dealership-Inventory/app/src/main/AndroidManifest.xml
@@ -6,13 +6,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/dealer_logo_round"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/dealer_logo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity"
-            android:label="Welcome To 436 Car Dealership">
+        <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
